--- a/QueixaAki.App/QueixaAki/Views/ConfiguracoesView.xaml
+++ b/QueixaAki.App/QueixaAki/Views/ConfiguracoesView.xaml
@@ -5,4 +5,18 @@
              Title="Configurações"
              BackgroundColor="{StaticResource PrimaryColor}">
 
+    <TableView Intent="Menu"
+               HasUnevenRows="True"
+               Margin="25">
+        <TableRoot>
+            <TableSection>
+                <ViewCell>
+                    <Button Text="SAIR DO APP"
+                            Command="{Binding SairCommand}"
+                            HorizontalOptions="FillAndExpand"
+                            Margin="0,10,0,0"/>
+                </ViewCell>
+            </TableSection>
+        </TableRoot>
+    </TableView>
 </ContentPage>
