--- a/QueixaAki.App/QueixaAki/Views/QueixaAkiView.xaml
+++ b/QueixaAki.App/QueixaAki/Views/QueixaAkiView.xaml
@@ -2,84 +2,28 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:videoPlayer="clr-namespace:Octane.Xamarin.Forms.VideoPlayer;assembly=Octane.Xamarin.Forms.VideoPlayer"
-             xmlns:system="clr-namespace:System;assembly=netstandard"
-             xmlns:converters="clr-namespace:QueixaAki.Converters;assembly=QueixaAki"
              x:Class="QueixaAki.Views.QueixaAkiView"
              Title="Escolha ou grave seu vídeo"
              BackgroundColor="{StaticResource PrimaryColor}"
              Shell.TabBarIsVisible="false">
-    <ContentPage.Resources>
-        <ResourceDictionary>
-            <converters:InvertedBoolConverter x:Key="InvertedBool" />
-        </ResourceDictionary>
-    </ContentPage.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-
-        <ImageButton Grid.Row="0"
-                     Grid.Column="0" 
-                     Margin="10"
-                     Padding="5"
-                     CornerRadius="10"
-                     WidthRequest="70"
-                     HeightRequest="50"
-                     Source="paper_clip.png"
-                     Command="{Binding EscolherVideoCommand}"/>
-
-        <ImageButton Grid.Row="0"
-                     Grid.Column="1" 
-                     Margin="10"
-                     Padding="5"
-                     CornerRadius="10"
-                     WidthRequest="70"
-                     HeightRequest="50"
-                     Source="camera.png"
-                     Command="{Binding GravarVideoCommand}"/>
 
         <videoPlayer:VideoPlayer x:Name="VPvideoPlayer" 
-                                 Grid.Row="1"
-                                 Grid.Column="0"
-                                 Grid.ColumnSpan="2"
+                                 Grid.Row="0"
                                  AutoPlay="True"
-                                 Source="{Binding VideoSource}"
-                                 IsVisible="{Binding VideoPlayerVisible}"/>
+                                 Source="{Binding VideoSource}"/>
 
-        <Label Grid.Row="1"
-               Grid.Column="0"
-               Grid.ColumnSpan="2"
-               FontSize="Medium"
-               HorizontalTextAlignment="Center"
-               VerticalOptions="CenterAndExpand"
-               IsVisible="{Binding Path=VideoPlayerVisible, Converter={StaticResource InvertedBool}}">
-            <Label.FormattedText>
-                <FormattedString>
-                    <Span Text="Escolha um vídeo de no máximo 500MB"/>
-                    <Span Text="{x:Static system:Environment.NewLine}"/>
-                    <Span Text="ou"/>
-                    <Span Text="{x:Static system:Environment.NewLine}"/>
-                    <Span Text="Grave um vídeo de no máximo 1 minuto"/>
-                </FormattedString>
-            </Label.FormattedText>
-        </Label>
-
-        <ImageButton Grid.Row="2"
-                     Grid.Column="0"
-                     Grid.ColumnSpan="2"
+        <ImageButton Grid.Row="1"
                      Margin="10,5,10,10"
                      Padding="5"
                      CornerRadius="10"
                      WidthRequest="70"
                      HeightRequest="50"
                      Source="send.png"
-                     Command="{Binding EnviarQueixaCommand}"
-                     IsVisible="{Binding VideoPlayerVisible}"/>
+                     Command="{Binding EnviarQueixaCommand}"/>
     </Grid>
 </ContentPage>
