--- a/QueixaAki.App/QueixaAki/Views/QueixasView.xaml
+++ b/QueixaAki.App/QueixaAki/Views/QueixasView.xaml
@@ -13,6 +13,7 @@
     </ContentPage.Resources>
 
     <ListView ItemsSource="{Binding Queixas}"
+              SelectedItem="{Binding QueixaSelected}"
               Margin="25"
               IsPullToRefreshEnabled="True"
               RefreshCommand="{Binding AtualizarCommand}"
@@ -34,32 +35,22 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
 
-                        <AbsoluteLayout Grid.Row="0"
-                                        Grid.RowSpan="3"
-                                        Grid.Column="0"
-                                        Margin="0,10,10,10"
-                                        VerticalOptions="CenterAndExpand">
-                            <StackLayout AbsoluteLayout.LayoutFlags="All" 
-                                         AbsoluteLayout.LayoutBounds="0,0,1,1">
-                                <ImageButton x:Name="DownloadBtn"
-                                             Padding="5"
-                                             CornerRadius="360"
-                                             WidthRequest="45"
-                                             HeightRequest="45"
-                                             BackgroundColor="Transparent"
-                                             Source="download.png"
-                                             IsVisible="{Binding Path=Download, Converter={StaticResource InvertedBool}}"
-                                             Clicked="DownloadBtn_OnClicked" 
-                                             CommandParameter="{Binding Id}"/>
-                            </StackLayout>
+                        <StackLayout Grid.Row="0"
+                                     Grid.RowSpan="3"
+                                     Grid.Column="0"
+                                     Margin="0,10,10,10"
+                                     VerticalOptions="CenterAndExpand">
 
+                                <Image WidthRequest="35"
+                                       HeightRequest="35"
+                                       BackgroundColor="Transparent"
+                                       Source="download.png"
+                                       IsVisible="{Binding Path=Download, Converter={StaticResource InvertedBool}}"/>
 
-                            <ActivityIndicator AbsoluteLayout.LayoutFlags="PositionProportional"
-                                               AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1"
-                                               IsVisible="{Binding Download}" 
+                            <ActivityIndicator IsVisible="{Binding Download}" 
                                                IsRunning="{Binding Download}" 
                                                Color="{StaticResource SecondaryColor}"/>
-                        </AbsoluteLayout>
+                        </StackLayout>
 
 
                         <Label Grid.Row="0"
