--- a/QueixaAki.App/QueixaAki/Views/QueixasView.xaml
+++ b/QueixaAki.App/QueixaAki/Views/QueixasView.xaml
@@ -5,44 +5,50 @@
              x:Class="QueixaAki.Views.QueixasView"
              Title="Queixas"
              BackgroundColor="{StaticResource PrimaryColor}"
-             x:Name="QueixasPage">
+             Shell.TabBarIsVisible="{Binding Path=Carregando, Converter={StaticResource InvertedBool}}">
     <ContentPage.Resources>
         <ResourceDictionary>
             <converters:InvertedBoolConverter x:Key="InvertedBool" />
         </ResourceDictionary>
     </ContentPage.Resources>
 
-    <ListView x:Name="QueixasList"
-              ItemsSource="{Binding Queixas}"
-              ItemTapped="QueixasList_OnItemTapped"
-              SelectionMode="None"
-              Margin="25"
-              IsPullToRefreshEnabled="True"
-              RefreshCommand="{Binding AtualizarCommand}"
-              IsRefreshing="{Binding Carregando}"
-              RefreshControlColor="{StaticResource SecondaryColor}"
-              SeparatorColor="{StaticResource SecondaryColor}"
-              HasUnevenRows="True">
-        <ListView.ItemTemplate>
-            <DataTemplate>
-                <ViewCell>
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
+    <AbsoluteLayout HorizontalOptions="FillAndExpand" 
+                    VerticalOptions="FillAndExpand">
+        <ListView x:Name="QueixasList"
+                  AbsoluteLayout.LayoutFlags="All"
+                  AbsoluteLayout.LayoutBounds="0,0,1,1"
+                  IsEnabled="{Binding Path=Carregando, Converter={StaticResource InvertedBool}}"
+                  ItemsSource="{Binding Queixas}"
+                  ItemTapped="QueixasList_OnItemTapped"
+                  SelectionMode="None"
+                  Margin="25"
+                  IsPullToRefreshEnabled="True"
+                  RefreshCommand="{Binding AtualizarCommand}"
+                  IsRefreshing="{Binding ListViewCarregando}"
+                  RefreshControlColor="{StaticResource SecondaryColor}"
+                  SeparatorColor="{StaticResource SecondaryColor}"
+                  HasUnevenRows="True">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
 
-                        <StackLayout Grid.Row="0"
-                                     Grid.RowSpan="3"
-                                     Grid.Column="0"
-                                     Margin="0,10,10,10"
-                                     VerticalOptions="CenterAndExpand"
-                                     IsVisible="{Binding DownloadVisible}">
+                            <StackLayout Grid.Row="0"
+                                         Grid.RowSpan="3"
+                                         Grid.Column="0"
+                                         Margin="0,10,10,10"
+                                         VerticalOptions="CenterAndExpand"
+                                         IsVisible="{Binding DownloadVisible}">
 
                                 <Image WidthRequest="35"
                                        HeightRequest="35"
@@ -50,34 +56,62 @@
                                        Source="download.png"
                                        IsVisible="{Binding Path=Download, Converter={StaticResource InvertedBool}}"/>
 
-                            <ActivityIndicator IsVisible="{Binding Download}" 
-                                               IsRunning="{Binding Download}" 
-                                               Color="{StaticResource TertiaryColor}"/>
-                        </StackLayout>
+                                <ActivityIndicator IsVisible="{Binding Download}"
+                                                   IsRunning="{Binding Download}"
+                                                   Color="{StaticResource TertiaryColor}"/>
+                            </StackLayout>
 
 
-                        <Label Grid.Row="0"
-                               Grid.Column="1"
-                               Text="{Binding DataCriacao, StringFormat='{0:dd/MM/yyyy}'}"
-                               FontSize="14" 
-                               FontAttributes="Bold"
-                               HorizontalTextAlignment="End"/>
+                            <Label Grid.Row="0"
+                                   Grid.Column="1"
+                                   Text="{Binding DataCriacao, StringFormat='{0:dd/MM/yyyy}'}"
+                                   FontSize="14"
+                                   FontAttributes="Bold"
+                                   HorizontalTextAlignment="End"/>
 
-                        <Label Grid.Row="1"
-                               Grid.Column="1" 
-                               Text="{Binding NomeArquivoCompleto}" 
-                               FontSize="20" 
-                               VerticalTextAlignment="Center"/>
+                            <Label Grid.Row="1"
+                                   Grid.Column="1"
+                                   Text="{Binding NomeArquivoCompleto}"
+                                   FontSize="20"
+                                   VerticalTextAlignment="Center"/>
 
-                        <Label Grid.Row="2"
-                               Grid.Column="1"
-                               Text="{Binding Endereco.EnderecoCompleto}"
-                               FontSize="14" 
-                               FontAttributes="Bold"
-                               TextColor="DarkGray"/>
-                    </Grid>
-                </ViewCell>
-            </DataTemplate>
-        </ListView.ItemTemplate>
-    </ListView>
+                            <Label Grid.Row="2"
+                                   Grid.Column="1"
+                                   Text="{Binding Endereco.EnderecoCompleto}"
+                                   FontSize="14"
+                                   FontAttributes="Bold"
+                                   TextColor="DarkGray"/>
+
+                            <StackLayout Grid.Row="0"
+                                         Grid.RowSpan="3"
+                                         Grid.Column="2">
+
+                                <ImageButton x:Name="DeleteBtn"
+                                             Padding="8"
+                                             CornerRadius="50"
+                                             WidthRequest="35"
+                                             HeightRequest="35"
+                                             Source="send.png"
+                                             VerticalOptions="CenterAndExpand"
+                                             Clicked="DeleteBtn_OnClicked"
+                                             CommandParameter="{Binding .}"/>
+                            </StackLayout>
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <StackLayout IsVisible="{Binding Carregando, Mode=TwoWay}"
+                     AbsoluteLayout.LayoutFlags="PositionProportional"
+                     AbsoluteLayout.LayoutBounds="0.5,0.5,-1,-1">
+            <Frame Padding="12"
+                   CornerRadius="360"  
+                   BorderColor="{StaticResource SecondaryColor}">
+
+                <ActivityIndicator IsRunning="{Binding Carregando, Mode=TwoWay}" 
+                                   Color="{StaticResource SecondaryColor}"/>
+            </Frame>
+        </StackLayout>
+    </AbsoluteLayout>
 </ContentPage>
