--- a/QueixaAki.App/QueixaAki/Views/QueixasView.xaml
+++ b/QueixaAki.App/QueixaAki/Views/QueixasView.xaml
@@ -64,7 +64,7 @@
 
                             <Label Grid.Row="0"
                                    Grid.Column="1"
-                                   Text="{Binding DataCriacao, StringFormat='{0:dd/MM/yyyy}'}"
+                                   Text="{Binding DataCriacao, StringFormat='{0:dd/MM/yyyy - HH:mm}'}"
                                    FontSize="14"
                                    FontAttributes="Bold"
                                    HorizontalTextAlignment="End"/>
